# acc-stats

./: cabal.project  flake.nix
acc-session-state/: CHANGELOG.md  acc-session-state.cabal
acc-session-state/src/Acc/Session/: DataStructures.hs  State.hs
acc-session-state/test-data/: brands-hatch-3-laps.json  brands-hatch-3-laps.txt  zolder-5-laps-tyre-temps.json  zolder-5-laps-tyre-temps.txt
acc-session-state/test-data/brands-hatch-3-laps/: 2022-04-18--09-46-26.json  2022-04-18--09-46-36.json  2022-04-18--09-46-46.json  2022-04-18--09-46-56.json  2022-04-18--09-47-06.json  2022-04-18--09-47-16.json  2022-04-18--09-47-26.json  2022-04-18--09-47-36.json  2022-04-18--09-47-46.json  2022-04-18--09-47-56.json  2022-04-18--09-48-06.json  2022-04-18--09-48-16.json  2022-04-18--09-48-26.json  2022-04-18--09-48-36.json  2022-04-18--09-48-46.json  2022-04-18--09-48-56.json  2022-04-18--09-49-06.json  2022-04-18--09-49-16.json  2022-04-18--09-49-26.json  2022-04-18--09-49-36.json  2022-04-18--09-49-46.json  2022-04-18--09-49-56.json  2022-04-18--09-50-06.json  2022-04-18--09-50-16.json  2022-04-18--09-50-26.json  2022-04-18--09-50-36.json  2022-04-18--09-50-46.json  2022-04-18--09-50-56.json  2022-04-18--09-51-06.json  2022-04-18--09-51-16.json  2022-04-18--09-51-26.json  2022-04-18--09-51-36.json  2022-04-18--09-51-46.json  2022-04-18--09-51-56.json  2022-04-18--09-52-06.json  2022-04-18--09-52-16.json  2022-04-18--09-52-26.json  2022-04-18--09-52-36.json  2022-04-18--09-52-46.json  2022-04-18--09-52-56.json  (+1 more)
acc-session-state/unit-test/: Main.hs
acc-stats-api/: CHANGELOG.md  acc-stats-api.cabal
acc-stats-api/src/Acc/Stats/: API.hs
acc-stats-client/: CHANGELOG.md  acc-stats-client.cabal
acc-stats-client/app/: AccMapping.hs  Main.hs
acc-stats-client/fake-app/: Main.hs
acc-stats-client/src/Acc/Stats/: Client.hs
acc-stats-server/: CHANGELOG.md  acc-stats-server.cabal
acc-stats-server/app/: Main.hs
acc-stats-server/migration-scripts/: 0001-create-session-lap-tables.psql
acc-stats-server/src/Acc/Stats/: DbQueries.hs  Migrations.hs  Server.hs
acc-stats-server/unit-test/: Main.hs
acc-statspage/: CHANGELOG.md  acc-statspage.cabal
acc-statspage-examples/: CHANGELOG.md  acc-statspage-examples.cabal
acc-statspage-examples/examples/: graphics.txt  physics.txt  stats.txt
acc-statspage-examples/src/Acc/StatsPage/: Examples.hs
acc-statspage-examples/unit-test/: Main.hs
acc-statspage/src/Acc/: StatsPage.hs
acc-statspage/src/Acc/StatsPage/: Binary.hs
hasql-example/: CHANGELOG.md  hasql-example.cabal
hasql-example/app/: Main.hs
hasql-example/migration-scripts/: 0001-create-users.psql  0002-users-drop-password.psql
