cabal-version:      3.0
name:               acc-stats-api
version:            0.1.0.0
synopsis:           REST API for ACC stats service
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
extra-source-files: CHANGELOG.md

library
  ghc-options:     -Wall -Werror -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  exposed-modules: Acc.Stats.API
  build-depends:
    , acc-statspage
    , aeson
    , base
    , containers
    , lens
    , servant
    , text

  hs-source-dirs:  src
