cabal-version:      3.0
name:               acc-stats-client
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  exposed-modules:  Acc.Stats.Client
  build-depends:
    , acc-stats-api
    , base
    , http-client
    , servant
    , servant-client

  hs-source-dirs:   src

  if impl(ghcjs)
    buildable: False

executable acc-stats-client
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   app

  if (impl(ghcjs) || !os(windows))
    buildable: False

  build-depends:
    , acc-stats-api
    , acc-stats-client
    , acc-statspage
    , aeson
    , base
    , binary
    , bytestring
    , http-client
    , http-types
    , servant
    , servant-client
    , time
    , Win32

executable acc-stats-client-fake
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   fake-app
  build-depends:
    , acc-stats-api
    , acc-stats-client
    , acc-statspage-examples
    , base
    , bytestring

  if impl(ghcjs)
    buildable: False
