cabal-version:      3.0
name:               acc-stats-client
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options:      -Wall -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  exposed-modules:  Acc.Stats.Client
  build-depends:
    , acc-stats-api
    , base
    , http-client
    , servant
    , servant-client

  hs-source-dirs:   src

  if impl(ghcjs)
    buildable: False

executable acc-stats-client
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:    AccMapping
  hs-source-dirs:   app
  ghc-options:      -Wall -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if (impl(ghcjs) || !os(windows))
    buildable: False

  build-depends:
    , acc-session-state
    , acc-stats-api
    , acc-stats-client
    , acc-statspage
    , base
    , binary
    , bytestring
    , http-client
    , http-types
    , mtl
    , servant
    , servant-client
    , Win32

executable acc-stats-client-fake
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   fake-app
  build-depends:
    , acc-stats-api
    , acc-stats-client
    , acc-statspage-examples
    , base
    , bytestring

  if impl(ghcjs)
    buildable: False
