cabal-version:      3.0
name:               acc-stats-server
version:            0.1.0.0
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:  
    Acc.Stats.DbQueries
    Acc.Stats.Migrations
    Acc.Stats.Server
  hs-source-dirs:   src

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages
  ghc-options:      -Wall -fhide-source-paths

  build-depends:
    , acc-session-state
    , acc-stats-api
    , base
    , bytestring
    , hasql
    , hasql-migration
    , hasql-th
    , hasql-transaction
    , mtl
    , servant-server
    , time

  if impl(ghcjs) || os(windows)
    buildable: False

executable acc-stats-server
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , acc-stats-server
    , bytestring
    , base
    , optparse-applicative
    , warp
    , hasql

  hs-source-dirs:   app
  ghc-options:      -Wall -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if impl(ghcjs) || os(windows)
    buildable: False

test-suite acc-logging-server-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   unit-test
  main-is:          Main.hs
  ghc-options:      -Wall -fhide-source-paths

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  build-depends:
    , acc-stats-api
    , acc-stats-server
    , acc-statspage-examples
    , base
    , containers
    , hspec
    , http-client
    , servant-client
    , servant-server
    , wai
    , warp

  if impl(ghcjs) || os(windows)
    buildable: False
