cabal-version:      3.0
name:               acc-statspage-examples
version:            0.1.0.0
synopsis:
homepage:
license:
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
extra-source-files:
  CHANGELOG.md
  examples/graphics.txt
  examples/physics.txt
  examples/stats.txt

library
  exposed-modules: Acc.StatsPage.Examples
  hs-source-dirs:  src
  ghc-options:     -Wall -Werror -fhide-source-paths
  build-depends:
    , acc-statspage
    , base
    , bytestring
    , file-embed

  if impl(ghcjs)
    buildable: False

test-suite acc-statspage-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: unit-test
  main-is:        Main.hs
  ghc-options:    -Wall -Werror -fhide-source-paths
  build-depends:
    , acc-statspage
    , acc-statspage-examples
    , base
    , hspec
    , lens

  if impl(ghcjs)
    buildable: False
