cabal-version:      3.0
name:               acc-statspage
version:            0.1.0.0
synopsis:           datatype definitions from ACC stats page shared memory
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -fhide-source-paths
  exposed-modules:
    Acc.StatsPage
    Acc.StatsPage.Binary

  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , lens
    , text
    , vector
    , vector-binary-instances

  hs-source-dirs:   src
