cabal-version:      3.0
name:               hasql-example
version:            0.1.0.0
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
extra-source-files: CHANGELOG.md

executable hasql-example
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , hasql
    , hasql-migration
    , hasql-th
    , hasql-transaction

  hs-source-dirs:   app
  default-language: Haskell2010
